# serialization_examples

./: .clang-format  .gitignore  CMakeLists.txt  README.md  projectXcode.sh
avro/: CMakeLists.txt
avro/example_generated_files/: Person.v1.hpp  Person.v2.hpp
avro/idl/: Person.v1.avdl  Person.v2.avdl
avro/schema/: Person.v1.avsc  Person.v2.avsc
avro/src/: simple.cc  upgrade_consumer.cc  upgrade_producer.cc  utils.cc  utils.h
protobuf/: CMakeLists.txt
protobuf/example_generated_files/: Person.v1.pb.cc  Person.v1.pb.h  Person.v2.pb.cc  Person.v2.pb.h  README.md
protobuf/proto/: Person.v1.proto  Person.v2.proto
protobuf/src/: simple.cc  upgrade_producer.cc  utils.h
